--- a/app/src/main/res/layout/activity_searching_user_setup.xml
+++ b/app/src/main/res/layout/activity_searching_user_setup.xml
@@ -85,20 +85,22 @@
                 android:layout_margin="@dimen/margin_normal"
                 android:orientation="horizontal">
 
-                <TextView
+                <Button
+                    android:id="@+id/btnSelectGrade"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Lớp"
+                    android:text="Chọn lớp"
                     android:textColor="@color/colorText"
-                    android:textSize="@dimen/text_size" />
+                    android:textSize="12sp" />
 
-                <MultiAutoCompleteTextView
-                    android:id="@+id/atxtGrade"
+
+                <EditText
+                    android:id="@+id/edtGrade"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_normal"
-                    android:completionThreshold="1"
+                    android:focusable="false"
                     android:textSize="@dimen/text_size" />
             </LinearLayout>
 
@@ -108,20 +110,21 @@
                 android:layout_margin="@dimen/margin_normal"
                 android:orientation="horizontal">
 
-                <TextView
+                <Button
+                    android:id="@+id/btnSelectSubject"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:text="Môn"
+                    android:text="Chọn môn"
                     android:textColor="@color/colorText"
-                    android:textSize="@dimen/text_size" />
+                    android:textSize="12sp" />
 
-                <MultiAutoCompleteTextView
-                    android:id="@+id/atxtSubject"
+                <EditText
+                    android:id="@+id/edtSubject"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_normal"
-                    android:completionThreshold="1"
+                    android:focusable="false"
                     android:textSize="@dimen/text_size" />
             </LinearLayout>
 
